// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`category snapshot renders with default props 1`] = `
<WithStyles(Card)
  className="className"
>
  <WithStyles(InputHeader)
    label="Category title"
    onChange={[Function]}
    onDelete={[MockFunction]}
  />
  <DropTarget(WithStyles(DroppablePlaceHolder))
    categoryId="1"
    onDeleteChoice={[MockFunction]}
    onDropChoice={[MockFunction]}
  />
  <WithStyles(CardActions)>
    <WithStyles(Component)
      label="delete"
      onClick={[MockFunction]}
    />
  </WithStyles(CardActions)>
</WithStyles(Card)>
`;

exports[`category snapshot renders without some components if no handlers are provided 1`] = `
<WithStyles(Card)
  className="className"
>
  <DropTarget(WithStyles(DroppablePlaceHolder))
    categoryId="1"
    onDeleteChoice={[MockFunction]}
    onDropChoice={[MockFunction]}
  />
</WithStyles(Card)>
`;
